package beta;

interface FileProcessor {
    void read(String filePath);
    void parse();
    void save();
}
